--- a/sample extension/manifest.json
+++ b/sample extension/manifest.json
@@ -9,9 +9,16 @@
      "default_icon": "icon.png",
      "default_popup": "popup.html"
     },
+
+    "background": {
+        "scripts": ["background.js"],
+        "persistent": false
+      },
+      
     "permissions": [
      "activeTab",
-     "tabs"
+     "tabs",
+     "http://127.0.0.1:8000/"
      ]
   }
   
